--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wage War - Happy Hunting</title>
+    <script charset="utf-8" src="https://widgetv3.bandsintown.com/main.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
