--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       fbq('init', '1682373362048564');
       fbq('track', 'PageView');
     </script>
-    <style>
-      .noscript {
-        display: none;
-      }
-    </style>
-    <noscript><img height="1" width="1" class="noscript" src="https://www.facebook.com/tr?id=1682373362048564&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript>
+      <img 
+        height="1" 
+        width="1" 
+        style="display: none;" 
+        src="https://www.facebook.com/tr?id=1682373362048564&ev=PageView&noscript=1" 
+      />
+    </noscript>
     <!-- End Facebook Pixel Code -->
     
     <!-- Google tag (gtag.js) -->
