--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script charset="utf-8" src="https://widgetv3.bandsintown.com/main.min.js"></script>
 
     
-    <!-- Facebook Pixel Code -->
+    <!-- Facebook Script Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -31,6 +31,10 @@
       fbq('init', '1682373362048564');
       fbq('track', 'PageView');
     </script>
+    <!-- End Facebook Script Pixel Code -->
+  </head>
+  <body>
+    <!-- Facebook No Script Pixel Code -->
     <noscript>
       <img 
         height="1" 
@@ -39,9 +43,8 @@
         src="https://www.facebook.com/tr?id=1682373362048564&ev=PageView&noscript=1" 
       />
     </noscript>
-    <!-- End Facebook Pixel Code -->
-  </head>
-  <body>
+    <!-- End Facebook No Script Pixel Code -->
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
